syntax = "proto3";

import "proto/user/status.proto";

option go_package = "github.com/s-min-sys/protorepo/gens/userpb;userpb";
option java_multiple_files = true;
option java_package = "com.patdzb.user";
option java_outer_classname = "UserProto";

message SetAdminFlagRequest {
  string biz_id = 1;
  uint64 user_id = 2;
  bool admin_flag = 3;
}

message SetAdminFlagResponse {
  Status status = 1;
}

service AuthenticatorAdmin {
  rpc SetAdminFlag(SetAdminFlagRequest) returns (SetAdminFlagResponse) {}
}